--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ button.fancybox-button--share, button.fancybox-button--fsenter, button.fancybox-
 <div class="site-branding">
 
 	
-						<h1 class="site-title">陈（Chen） 彦坤（Yankun）</h1>
+						<h1 class="site-title">陈 彦坤 Chen Yankun</h1>
 			
 			<p class="site-description">
 			Students		</p>
@@ -190,15 +190,7 @@ button.fancybox-button--share, button.fancybox-button--fsenter, button.fancybox-
 
 
 
-<p>In my recent <a href="https://katjavogt.github.io/desiring-the-good/" data-type="page" data-id="434"><em>Desiring the Good: Ancient Proposals and Contemporary Theory</em> (OUP, 2017, paperback 2021)</a>, I aim to show in which sense it may be true that human beings are “the measure” such that this is not a relativist proposal, but an insight about the nature of ethics. In <a href="https://www.happinessandwellbeing.org/vogt/">Imagination and Agency</a>, I aim to clarify the Aristotelian dictum that deliberation is about the possible, and what it means that some decision is right. I co-authored three papers with Jens Haas, <a href="https://katjavogt.github.io/selected-papers#incomplete-ignorance" data-type="page">“Incomplete Ignorance” (2020)</a>, <a href="https://katjavogt.github.io/selected-papers##ignorance-investigation" data-type="page">“Ignorance and Investigation” (2015)</a>, and <a href="https://katjavogt.github.io/selected-papers#love-hatred" data-type="page">“Love and Hatred” (2018)</a>. In a new volume, <a href="https://katjavogt.github.io/epistemology-after-sextus-empiricus-ed/" data-type="page" data-id="425"><em>Epistemology After Sextus Empiricus</em> (OUP, 2020)</a>, co-edited with Justin Vlasits, I return to my long-term interest in skepticism, and I’m finalizing a set of related papers for a monograph, tentatively entitled <em>The Original Stoics</em>.</p>
-
-
-
-<p>I’m an editor of <em>Nous</em>, one of the two North American co-editors of the <em>Archiv für Geschichte der Philosophie</em>, and serve on the editorial boards of the <em>Journal of Philosophy</em>, <em>Apeiron</em>, and <em>Rhizomata</em>, and as Associate Editor for philosophy of language, epistemology, and logic of <em>Dialogoi: Ancient Philosophy Today</em>. At Columbia University and due to the pandemic, I became interested in the opportunities and challenges of teaching and conducting research remotely. I’m chairing a subcommittee of the Policy and Planning Committee on Teaching Modalities and I’m an academic sponsor of <a href="https://katjavogt.github.io/outreach-logic-made-accessible/" data-type="page" data-id="1850">Logic Made Accessible</a>, a project devoted to making ancient logic freely accessible for students of all ages.</p>
-
-
-
-<p>When I’m not in NYC, I’m traveling with photographer and artist Jens Haas. <a href="https://katjavogt.github.io/on-the-road/" data-type="page" data-id="80">On the Road</a> has become an art project and a philosophical diary. <a href="https://katjavogt.github.io/movies-and-morals/" data-type="page" data-id="67">Movies and Morals</a>, in collaboration with H8URS, is a growing series of video commentary on philosophy and art in contemporary film and television shows.</p>
+		<p>啊啊啊</p>
 	</div>
 
 	</article>
